# safe_arch

./: Cargo.toml  README.md  appveyor.yml  changelog.md  clippy.toml  filter-intel-xml.py  nomoj.txt  rustfmt.toml  tmp.txt
.cargo/: config
.github/workflows/: rust.yml
scripts/: intel-helper.py
src/: lib.rs  naming_conventions.rs
src/aarch64/: float32x4_.rs  float64x2_.rs  int16x8_.rs  int32x4_.rs  int64x2_.rs  int8x16_.rs  neon.rs  uint16x8_.rs  uint32x4_.rs  uint64x2_.rs  uint8x16_.rs
src/intel/: avx.rs  bmi1.rs  bmi2.rs  lzcnt.rs  m128_.rs  m128d_.rs  m128i_.rs  m256_.rs  m256d_.rs  m256i_.rs  pclmulqdq.rs  popcnt.rs  rdseed.rs  sse.rs  sse2.rs  sse3.rs  sse4_1.rs  sse4_2.rs  ssse3.rs
src/x86_64/: sse.rs
src/x86_x64/: adx.rs  aes.rs  avx.rs  avx2.rs  avx512.rs  bmi1.rs  bmi2.rs  fma.rs  lzcnt.rs  m128_.rs  m128d_.rs  m128i_.rs  m256_.rs  m256d_.rs  m256i_.rs  m512_.rs  m512d_.rs  m512i_.rs  pclmulqdq.rs  popcnt.rs  rdrand.rs  rdseed.rs  sse.rs  sse2.rs  sse3.rs  sse4_1.rs  sse4_2.rs  ssse3.rs
tests/: atoi_sse2.rs  memcpy.rs  memcpy.rs.bak  number.rs  pythagoras.rs  pythagoras.rs.bak  str_cmp.rs  xor_hash.rs  xor_hash.rs.bak
tests/integration/: adx_tests.rs  avx512_tests.rs  avx_tests.rs  bmi1_tests.rs  bmi2_tests.rs  lzcnt_tests.rs  main.rs  popcnt_tests.rs  rdrand_tests.rs  rdseed_tests.rs  sse2_tests.rs  sse4_1_tests.rs  sse4_2_tests.rs  ssse3_tests.rs
