[package]
name = "safe_arch"
description = "Crate that exposes `core::arch` safely (via `#[cfg()]`)."
version = "0.2.0-alpha.0"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"
categories = ["api-bindings", "hardware-support", "no-std"]
keywords = ["intrinsics", "simd"]

[dependencies]
# If enabled, gives Zeroed and Pod impls for our types
bytemuck = {version = "1", optional = true}

[profile.test]
opt-level = 3
